--- a/package.json
+++ b/package.json
@@ -7,49 +7,29 @@
     "build": "next build",
     "start": "NODE_ENV=production node server.js"
   },
-  "author": "Adam Soffer",
-  "license": "MIT",
-  "standard": {
-    "parser": "babel-eslint",
-    "ignore": ["**/node_modules/**"],
-    "globals": [
-      "web3",
-      "contract",
-      "artifacts",
-      "describe",
-      "it",
-      "assert",
-      "before",
-      "beforeEach",
-      "expect"
+  "lint-staged": {
+    "*.{js,json}": [
+      "prettier --write --no-semi --single-quote --jsx-bracket-same-line",
+      "git add"
     ]
   },
+  "author": "Adam Soffer",
+  "license": "MIT",
   "devDependencies": {
     "babel-cli": "^6.22.2",
     "babel-core": "^6.22.1",
-    "babel-eslint": "^6.1.2",
     "babel-loader": "^6.2.10",
     "babel-plugin-transform-runtime": "^6.22.0",
     "babel-preset-env": "^1.1.8",
     "babel-preset-es2015": "^6.22.0",
     "babel-register": "^6.22.0",
     "copy-webpack-plugin": "^4.0.1",
-    "css-loader": "^0.26.1",
-    "eslint": "^3.14.0",
-    "eslint-config-standard": "^6.0.0",
-    "eslint-plugin-babel": "^4.0.0",
-    "eslint-plugin-mocha": "^4.8.0",
-    "eslint-plugin-promise": "^3.0.0",
-    "eslint-plugin-standard": "^2.0.0",
-    "html-webpack-plugin": "^2.28.0",
     "husky": "^0.14.3",
     "json-loader": "^0.5.4",
-    "lint-staged": "^4.2.3",
-    "prettier": "^1.7.0",
+    "lint-staged": "^4.3.0",
+    "prettier": "^1.7.4",
     "style-loader": "^0.13.1",
-    "truffle-contract": "^1.1.6",
-    "webpack": "^2.2.1",
-    "webpack-dev-server": "^2.3.0"
+    "truffle-contract": "^1.1.6"
   },
   "dependencies": {
     "bluebird": "^3.5.0",
@@ -64,13 +44,11 @@
     "moment": "^2.18.1",
     "next": "latest",
     "next-routes": "^1.0.27",
-    "parse": "^1.9.2",
     "prop-types": "^15.5.8",
     "react": "^15.5.4",
     "react-apollo": "^1.1.3",
     "react-dom": "^15.5.4",
     "react-truncate": "^2.1.5",
-    "redux": "^3.6.0",
     "sinon": "^2.3.8",
     "sinon-chai": "^2.12.0",
     "web3": "^0.19.0"
