--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Wonderfund",
+  "name": "wonderfund",
   "version": "0.0.1",
   "description": "Decentralized Crowdfunding",
   "scripts": {
@@ -16,41 +16,28 @@
   "author": "Adam Soffer",
   "license": "MIT",
   "devDependencies": {
-    "babel-cli": "^6.22.2",
-    "babel-core": "^6.22.1",
-    "babel-loader": "^6.2.10",
-    "babel-plugin-transform-runtime": "^6.22.0",
-    "babel-preset-env": "^1.1.8",
-    "babel-preset-es2015": "^6.22.0",
-    "babel-register": "^6.22.0",
-    "copy-webpack-plugin": "^4.0.1",
+    "babel-register": "^6.26.0",
     "husky": "^0.14.3",
-    "json-loader": "^0.5.4",
     "lint-staged": "^4.3.0",
-    "prettier": "^1.7.4",
-    "style-loader": "^0.13.1",
-    "truffle-contract": "^1.1.6"
+    "prettier": "^1.7.4"
   },
   "dependencies": {
-    "bluebird": "^3.5.0",
-    "chai": "^4.1.0",
-    "ethereumjs-testrpc": "^3.0.5",
-    "express": "^4.15.3",
-    "glamor": "^2.20.25",
-    "glamorous": "^3.15.1",
-    "graphql": "^0.9.3",
+    "bluebird": "^3.5.1",
+    "chai": "^4.1.2",
+    "express": "^4.16.2",
+    "glamor": "^2.20.40",
+    "glamorous": "^3.25.0",
     "isomorphic-fetch": "^2.2.1",
-    "js-cookie": "^2.1.4",
-    "moment": "^2.18.1",
-    "next": "latest",
-    "next-routes": "^1.0.27",
-    "prop-types": "^15.5.8",
-    "react": "^15.5.4",
-    "react-apollo": "^1.1.3",
-    "react-dom": "^15.5.4",
-    "react-truncate": "^2.1.5",
+    "js-cookie": "^2.2.0",
+    "moment": "^2.20.1",
+    "next": "^4.2.3",
+    "next-routes": "^1.3.0",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
     "sinon": "^2.3.8",
     "sinon-chai": "^2.12.0",
-    "web3": "^0.19.0"
+    "truffle-contract": "^3.0.3",
+    "web3": "^1.0.0-beta.28",
+    "zeppelin-solidity": "^1.6.0"
   }
 }
