--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "node server.js",
     "build": "next build",
-    "start": "NODE_ENV=production node server.js"
+    "start": "NODE_ENV=production node server.js",
+    "test": "bash scripts/run_ganache.sh && truffle test"
   },
   "lint-staged": {
     "*.{js,json}": [
@@ -16,14 +17,15 @@
   "author": "Adam Soffer",
   "license": "MIT",
   "devDependencies": {
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
     "babel-register": "^6.26.0",
+    "ganache-cli": "^6.1.0",
     "husky": "^0.14.3",
     "lint-staged": "^4.3.0",
     "prettier": "^1.7.4"
   },
   "dependencies": {
-    "bluebird": "^3.5.1",
-    "chai": "^4.1.2",
     "express": "^4.16.2",
     "glamor": "^2.20.40",
     "glamorous": "^3.25.0",
@@ -34,8 +36,6 @@
     "next-routes": "^1.3.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "sinon": "^2.3.8",
-    "sinon-chai": "^2.12.0",
     "truffle-contract": "^3.0.3",
     "web3": "^1.0.0-beta.28",
     "zeppelin-solidity": "^1.6.0"
